<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:visibility="visible"
    app:flow_horizontalAlign="center">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Backgound_style"
        android:background="@color/ic_launcher_background"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/Your_Emailid_Text"
            style="@style/Text_style"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="236dp"
            android:hint="@string/Enter_Email_Text"
            android:inputType="@string/Your_EmailId_Text"
            android:minHeight="48dp"
            android:textColorHint="@color/Text_colour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/Password_Text"
            style="@style/Text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:hint="@string/Enter_Password_Text"
            android:importantForAutofill="no"
            android:inputType="@string/Password_Text"
            android:minHeight="48dp"
            android:textColorHint="@color/Text_colour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Your_Emailid_Text"
            app:layout_constraintVertical_bias="0.0" />

        <Button


            android:id="@+id/Login_Button"

            style="@style/Button_style"
            android:layout_width="188dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/Button_colour"
            android:elevation="140dp"
            android:text="@string/Login_Button_Text"
            android:theme="@style/Button_style"
            app:cornerRadius="1500dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password_Text"
            app:layout_constraintVertical_bias="0.112"
            tools:ignore="OnClick" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="381dp"
            android:layout_height="352dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="81dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <Button


            android:id="@+id/register_button"

            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:autoText="false"
            android:backgroundTint="@color/transparent"
            android:elegantTextHeight="false"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/register_button_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/Text_colour"
            android:textIsSelectable="true"
            android:textSize="8sp"
            android:theme="@style/Button_style"
            app:cornerRadius="0dp"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Login_Button"
            app:layout_constraintVertical_bias="0.0"
            app:layout_wrapBehaviorInParent="vertical_only"
            tools:ignore="OnClick,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="622dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/Button_colour"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button"
            app:layout_constraintVertical_bias="0.313">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/Tranparent"
                app:srcCompat="@mipmap/google_png_foreground"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>