<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ic_launcher_background">


        <TextView
            android:id="@+id/congo_text"
            style="@style/Text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Congo_text"
            android:textAlignment="center"
            android:textColor="#4DD0E1"
            android:textSize="55sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.004" />

        <TextView
            android:id="@+id/Score_Text"
            style="@style/Text_style"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:text="@string/Your_score_Text"
            android:textAlignment="center"
            android:textColor="#4DD0E1"
            android:textSize="48sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congo_text"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/SCORE_no"
            android:layout_width="278dp"
            android:layout_height="229dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="376dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="150dp"
            android:text="@string/Score_text"
            android:textSize="96sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.076" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>